--- a/main.css
+++ b/main.css
@@ -1,21 +1,145 @@
 *{
-    box-sizing: border-box;
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
 
-body {
-      background: var(--tg-theme-bg-color);
-      color: var(--tg-theme-text-color);
-      font-family: sans-serif;
-      padding: 20px;
-      background-color: black;
-    }
+body{
+    background-color: #F5F6F6;
+    padding-top: 8px;
+    padding-left: 8px;
+    padding-right: 8px;
+    border-radius: 20px;
+}
 
-button {
-  width: 100%;
-  padding: 12px;
-  font-size: 18px;
-  border-radius: 10px;
-  border: none;
+h1{
+  font-size: 124px;
+  font-family: 'SF Pro', sans-serif;
+  color: Black;
+  font-weight: bold;
+}
+
+h2{
+  font-size: 84px;
+  font-family: 'SF Pro', sans-serif;
+  color: black;
+  font-weight: bold;
+}
+
+h3{
+  font-size: 56px;
+  font-family: 'SF Pro', sans-serif;
+  color: black;
+  font-weight: 400;
+}
+
+h4{
+    font-size: 22px;
+    font-family: 'SF Pro', sans-serif;
+    color: black;
+    font-weight: 400;
+}
+
+h5{
+    font-size: 18px;
+    font-family: 'SF Pro', sans-serif;
+    color: black;
+    font-weight: 400;
+}
+
+p{
+  font-size: 12px;
+  font-family: 'SF Pro', sans-serif;
+  color: Black;
+}
+
+.BlockTitle{
+  width: auto;
+  padding-top: 17px;
+  padding-bottom: 16px;
+  background-color: white;
+  border-radius: 14px;
+  text-align: center;
+}
+
+@font-face {
+  font-family: 'Lexend Peta';
+  src: url('./fonts/LexendPeta-Regular.woff2') format('woff2'),
+       url('./fonts/LexendPeta-Regular.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+}
+
+.LogoText{
+  font-size: 24px;
+  font-family: 'Lexend Peta', sans-serif;
+  font-weight: 400;
+}
+
+.AiSectionBlock{
+    border-radius: 16px;
+    background-color: white;
+    height: 82vh;
+    margin-top: 6px;
+    overflow: hidden;
+}
+
+.AiBlockText{
+    text-align: center;
+    padding-top: 40px;
+}
+
+.AiBlockImage {
+  position: relative;
+  margin-top: 10vh;
+  margin-left: -8vw;
+}
+
+.AiBlockStartImage{
+  width: 80vw;
+  height: 55vh;
+  border-radius: 12px;
+  transform: rotate(-15deg);
+  z-index: 2;
+  object-fit: cover;
+  position: absolute;
+  top: -2vh;
+  left: 8vw;
+}
+
+.AiBlockBackImage{
+  position: absolute;
+  height: 45vh;
+  width: 70vw;
+  top: 3vh;
+  left: 60vw;
+  transform: rotate(16deg);
+  z-index: 1;
+  object-fit: cover;
+  border-radius: 20px;
+}
+
+.ButtonSectionBlock{
+    margin-top: 6px;
+    margin-bottom: 6px;
+}
+.ButtonNext{
+    border-radius: 14px;
+    width: auto;
+    padding-top: 22px;
+    padding-bottom: 22px;
+    text-align: center;
+    background: linear-gradient(90deg, 
+        #6CAAFB 0%,      /* Голубой на 0% */
+        #0CB0F1 48%,     /* Бирюзовый на 48% */
+        #DD4679 100%     /* Розовый на 100% */
+    );
+    border: none;
+    border-radius: 14px;
+    cursor: pointer;
+    transition: transform 0.2s;
+}
+
+.ButtonNext h4{
+    color: white;
 }
