--- a/main.css
+++ b/main.css
@@ -31,6 +31,7 @@ h2{
     color: transparent;
   font-weight: bold;
 }
+
 h3{
   font-size: 56px;
   font-family: 'SF Pro', sans-serif;
@@ -81,7 +82,7 @@ p{
   font-weight: 400;
 }
 
-.AiSectionBlock{
+section{
     border-radius: 16px;
     background-color: white;
     height: 82vh;
@@ -98,6 +99,13 @@ p{
   position: relative;
   margin-top: 10vh;
   margin-left: -8vw;
+}
+
+.swiper-container {
+    /* width: 100%; */
+    /* max-width: 400px;
+    height: 600px; */
+    /* margin: 50px auto; */
 }
 
 .AiBlockStartImage{
@@ -134,11 +142,7 @@ p{
     padding-top: 22px;
     padding-bottom: 22px;
     text-align: center;
-    background: linear-gradient(90deg, 
-        #6CAAFB 0%,      /* Голубой на 0% */
-        #0CB0F1 48%,     /* Бирюзовый на 48% */
-        #DD4679 100%     /* Розовый на 100% */
-    );
+    background: linear-gradient(90deg, #a8ddff, #e3a8c7);
     border: none;
     border-radius: 14px;
     cursor: pointer;
